realm: separate comp_queue from event_impl

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -47,6 +47,7 @@ list(APPEND REALM_SRC
   realm/deppart/sparsity_impl.inl
   realm/atomics.h           realm/atomics.inl
   realm/bgwork.h            realm/bgwork.cc
+  realm/comp_queue_impl.h   realm/comp_queue_impl.cc
   realm/event_impl.h        realm/event_impl.cc
   realm/event_impl.inl
   realm/barrier_impl.h        realm/barrier_impl.cc
