--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND REALM_SRC
   realm/transfer/lowlevel_disk.cc
   realm/transfer/address_list.h            realm/transfer/address_list.cc
   realm/transfer/channel.h                 realm/transfer/channel.cc
+  realm/transfer/channel_common.h          realm/transfer/channel_common.cc
   realm/transfer/memcpy_channel.h          realm/transfer/memcpy_channel.cc
   realm/transfer/channel_disk.h            realm/transfer/channel_disk.cc
   realm/transfer/transfer.h                realm/transfer/transfer.cc
