--- a/test/prealm/CMakeLists.txt
+++ b/test/prealm/CMakeLists.txt
@@ -20,32 +20,9 @@ if(NOT Legion_SOURCE_DIR)
   find_package(Legion REQUIRED)
 endif()
 
-add_subdirectory(attach_file_mini)
-add_subdirectory(output_requirements)
-add_subdirectory(reduce_future)
-add_subdirectory(ctrl_repl_safety)
-add_subdirectory(rendering)
-add_subdirectory(realm)
-add_subdirectory(gather_perf)
-add_subdirectory(performance/realm/event_latency)
-add_subdirectory(performance/realm/task_throughput)
-add_subdirectory(performance/realm/event_ubench)
-add_subdirectory(performance/realm/task_ubench)
-add_subdirectory(performance/realm/memcpy)
-add_subdirectory(legion_redop_test)
-add_subdirectory(disjoint_complete)
-add_subdirectory(nested_replication)
-add_subdirectory(mapper)
-add_subdirectory(prealm)
-
-if(Legion_USE_HDF5)
-  add_subdirectory(hdf_attach_subregion_parallel)
-endif()
-
-if(Legion_USE_Python)
-  add_subdirectory(python_bindings)
-endif()
-
-if(Legion_NETWORKS)
-  add_subdirectory(bug954)
+# We only add the prealm tests if we're building the rust profiler as
+# that is the sign that we are testing profiler
+if(Legion_BUILD_RUST_PROFILER)
+  add_subdirectory(saxpy)
+  add_subdirectory(stencil)
 endif()
