test: make sure prealm tests link against zlib

--- a/test/prealm/saxpy/CMakeLists.txt
+++ b/test/prealm/saxpy/CMakeLists.txt
@@ -41,7 +41,7 @@ elseif(Legion_USE_HIP)
 else()
   add_executable(prealm_saxpy ${CPU_SOURCES})
 endif()
-target_link_libraries(prealm_saxpy Legion::Realm)
+target_link_libraries(prealm_saxpy Legion::Realm PRIVATE ZLIB::ZLIB)
 target_compile_options(prealm_saxpy PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_BUILD_WARNING_FLAGS}>)
 if(Legion_ENABLE_TESTING)
   add_test(NAME prealm_saxpy COMMAND ${Legion_TEST_LAUNCHER} $<TARGET_FILE:prealm_saxpy> ${Legion_TEST_ARGS})
