--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,6 +276,8 @@ cache: &global_cache
 before_script:
   - set -e
   - uname -a
+  # Make sure that we are ref-counting all sparsity maps for CI tests
+  - export REALM_DEFAULT_ARGS="-ll:enable_sparsity_refcount"
   - |
     if [[ "$(uname)" = "Linux" ]]; then
       export THREADS=$(nproc --all)
@@ -431,7 +433,8 @@ before_script:
       export KokkosKernels_DIR=`pwd`/kokkos-kernels/install
 
       # enable WAR for: https://github.com/kokkos/kokkos-kernels/issues/757
-      export REALM_DEFAULT_ARGS="-cuda:nongpusync 0"
+      # Keep the sparsity refcounting flag around when overwriting REALM_DEFAULT_ARGS
+      export REALM_DEFAULT_ARGS="-cuda:nongpusync 0 -ll:enable_sparsity_refcount"
 
       if [[ "$USE_CUDA" -eq 1 ]]; then
         # There are warnings when compiling kokkos_interop.cc, so disable WARN_AS_ERROR
