--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(predication)
 add_subdirectory(inline_tasks)
 add_subdirectory(local_function_tasks)
 add_subdirectory(layout_constraints)
+add_subdirectory(point_wise_dependence_analysis)
 add_subdirectory(provenance)
 add_subdirectory(tiling)
 add_subdirectory(padded_instances)
