Add Streaming example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -38,6 +38,7 @@ add_subdirectory(inline_tasks)
 add_subdirectory(local_function_tasks)
 add_subdirectory(layout_constraints)
 add_subdirectory(point_wise_dependence_analysis)
+add_subdirectory(streaming)
 add_subdirectory(provenance)
 add_subdirectory(tiling)
 add_subdirectory(padded_instances)
