legion: merge master into point wise analysis and resolve conflicts

--- a/test/realm/Makefile
+++ b/test/realm/Makefile
@@ -79,6 +79,8 @@ TESTS += sparsity_destroy
 TESTS += refcount_image_test
 TESTS += refcount_preimage_test
 TESTS += inst_chain_redistrict
+TESTS += refcount_setops_test
+TESTS += refcount_byfield_test
 
 ifeq ($(strip $(USE_CUDA)),1)
 TESTS += task_stream
