--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ cache: &global_cache
   PRIVILEGE_CHECKS: "1"
 
 .cxx17_normal: &cxx17_normal
-  CXXFLAGS: ""
+  CXXFLAGS: "-g"
   CXX_STANDARD: "17"
 .cxx17_external: &cxx17_external
   CXXFLAGS: ""
