Revert "ci: change configuration to help with debugging a ci hang, this commit should be reverted eventually"
This reverts commit adc671d157363155b5e0d00c5a1fb1f0b0ee713e.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ cache: &global_cache
   PRIVILEGE_CHECKS: "1"
 
 .cxx17_normal: &cxx17_normal
-  CXXFLAGS: "-g"
+  CXXFLAGS: ""
   CXX_STANDARD: "17"
 .cxx17_external: &cxx17_external
   CXXFLAGS: ""
