examples: make sure the streaming example runs with pointwise analysis enabled

--- a/examples/streaming/CMakeLists.txt
+++ b/examples/streaming/CMakeLists.txt
@@ -26,5 +26,5 @@ add_executable(streaming streaming.cc)
 target_link_libraries(streaming Legion::Legion)
 target_compile_options(streaming PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_BUILD_WARNING_FLAGS}>)
 if(Legion_ENABLE_TESTING)
-  add_test(NAME streaming COMMAND ${Legion_TEST_LAUNCHER} $<TARGET_FILE:streaming> ${Legion_TEST_ARGS})
+  add_test(NAME streaming COMMAND ${Legion_TEST_LAUNCHER} $<TARGET_FILE:streaming> ${Legion_TEST_ARGS} -lg:enable_pointwise_analysis)
 endif()
