realm: add test to the new cmake system

--- a/realm/tests/CMakeLists.txt
+++ b/realm/tests/CMakeLists.txt
@@ -76,6 +76,7 @@ endif()
 list(
   APPEND
   REALM_UNIT_TESTS
+  comp_queue_test.cc
   event_test.cc
   path_cache_test.cc
   transfer_utils_test.cc
