--- a/test/realm/unit_tests/CMakeLists.txt
+++ b/test/realm/unit_tests/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 list(APPEND REALM_TESTS
   comp_queue_test.cc
   ucx_mpool_test.cc
+  indexspace_iterator_test.cc
   barrier_test.cc
   event_test.cc
   path_cache_test.cc
