examples: add pointwise dependence analysis flag for pointwise analysis example

--- a/examples/point_wise_dependence_analysis/CMakeLists.txt
+++ b/examples/point_wise_dependence_analysis/CMakeLists.txt
@@ -26,5 +26,5 @@ add_executable(point_wise_dependence_analysis point_wise_dependence_analysis.cc)
 target_link_libraries(point_wise_dependence_analysis Legion::Legion)
 target_compile_options(point_wise_dependence_analysis PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_BUILD_WARNING_FLAGS}>)
 if(Legion_ENABLE_TESTING)
-  add_test(NAME point_wise_dependence_analysis COMMAND ${Legion_TEST_LAUNCHER} $<TARGET_FILE:point_wise_dependence_analysis> ${Legion_TEST_ARGS})
+  add_test(NAME point_wise_dependence_analysis COMMAND ${Legion_TEST_LAUNCHER} $<TARGET_FILE:point_wise_dependence_analysis> ${Legion_TEST_ARGS} -lg:enable_pointwise_analysis)
 endif()
