--- a/docker/Dockerfile.gitlab-ci-20.04
+++ b/docker/Dockerfile.gitlab-ci-20.04
@@ -13,7 +13,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:pypy/ppa -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl \
+      build-essential pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       g++-9 g++-10 g++-11 \
       gfortran-9 gfortran-10 gfortran-11 \
@@ -21,7 +21,6 @@ RUN dpkg --add-architecture i386 && \
       clang-12 libclang-12-dev llvm-12-dev libomp-12-dev \
       libedit-dev libncurses5-dev libffi-dev libpfm4-dev libxml2-dev \
       zlib1g-dev zlib1g-dev:i386 \
-      libdw-dev \
       mpich libmpich-dev \
       mesa-common-dev \
       libblas-dev liblapack-dev libhdf5-dev \
