--- a/docker/Dockerfile.gitlab-ci-22.04
+++ b/docker/Dockerfile.gitlab-ci-22.04
@@ -12,15 +12,14 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl \
+      build-essential pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       g++-10 g++-11 g++-12 \
       gfortran-10 gfortran-11 gfortran-12 \
       gcc-multilib g++-multilib \
-      clang-14 libclang-14-dev llvm-14-dev libomp-14-dev libmlir-14-dev \
+      clang-14 clang-format-14 libclang-14-dev llvm-14-dev libomp-14-dev libmlir-14-dev \
       libedit-dev libncurses5-dev libffi-dev libpfm4-dev libxml2-dev \
       zlib1g-dev zlib1g-dev:i386 \
-      libdw-dev \
       mpich libmpich-dev \
       mesa-common-dev \
       libblas-dev liblapack-dev libhdf5-dev \
