--- a/docker/Dockerfile.gitlab-ci-24.04
+++ b/docker/Dockerfile.gitlab-ci-24.04
@@ -12,16 +12,15 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl \
+      build-essential pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       python3-cffi python3-numpy python3-notebook python3-mypy \
       g++-10 g++-11 g++-12 \
       gfortran-10 gfortran-11 gfortran-12 \
       gcc-multilib g++-multilib \
-      clang-18 clang-tidy-18 libclang-18-dev llvm-18-dev libomp-18-dev libmlir-18-dev \
+      clang-18 clang-format-18 clang-tidy-18 libclang-18-dev llvm-18-dev libomp-18-dev libmlir-18-dev \
       libedit-dev libncurses5-dev libffi-dev libpfm4-dev libxml2-dev \
       zlib1g-dev zlib1g-dev:i386 \
-      libdw-dev \
       mpich libmpich-dev \
       mesa-common-dev \
       libblas-dev liblapack-dev libhdf5-dev \
