--- a/docker/Dockerfile.gitlab-ci-hpcsdk
+++ b/docker/Dockerfile.gitlab-ci-hpcsdk
@@ -13,8 +13,7 @@ RUN dpkg --add-architecture i386 && \
     add-apt-repository ppa:pypy/ppa -y && \
     apt-get update -qq && \
     apt-get install -qq \
-      curl \
-      libdw-dev \
+      curl ccache \
       libpython3-dev python3-pip pypy3 \
       gdb vim && \
     apt-get clean
