--- a/docker/Dockerfile.gitlab-ci-icc
+++ b/docker/Dockerfile.gitlab-ci-icc
@@ -15,7 +15,7 @@ RUN dpkg --add-architecture i386 && \
     apt-add-repository -y "deb https://apt.repos.intel.com/oneapi all main" && \
     apt-get update -qq && \
     apt-get install -qq \
-      build-essential pkg-config gfortran git time wget curl \
+      build-essential pkg-config gfortran git time wget curl ccache \
       libpython3-dev python3-pip pypy3 \
       g++-9 \
       gfortran-9 \
@@ -25,7 +25,6 @@ RUN dpkg --add-architecture i386 && \
       intel-oneapi-compiler-fortran=2023.1.0-46305 \
       libedit-dev libncurses5-dev libffi-dev libpfm4-dev libxml2-dev \
       zlib1g-dev zlib1g-dev:i386 \
-      libdw-dev \
       mpich libmpich-dev \
       mesa-common-dev \
       libblas-dev liblapack-dev libhdf5-dev \
