--- a/docker/Dockerfile.gitlab-ci-msvc
+++ b/docker/Dockerfile.gitlab-ci-msvc
@@ -1,6 +1,6 @@
 # Build Image for Gitlab CI - limited msvc compilation capability
 
-FROM madduci/docker-wine-msvc:16.9-2019
+FROM madduci/docker-wine-msvc:17.8-2022
 USER root
 ENTRYPOINT /bin/bash
 
@@ -9,5 +9,5 @@ MAINTAINER Sean Treichler <sean@nvidia.com>
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update -qq && \
-    apt-get install -qq apt-transport-https ca-certificates software-properties-common wget git vim && \
+    apt-get install -qq apt-transport-https ca-certificates software-properties-common wget git vim ccache && \
     apt-get clean
