ci: Upgrade Kokkos CI image.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -535,9 +535,6 @@ before_script:
   image: registry.gitlab.com/stanfordlegion/legion/gitlab-ci-22.04:250130
 .image_2404: &image_2404
   image: registry.gitlab.com/stanfordlegion/legion/gitlab-ci-24.04:250130
-# FIXME (Elliott): I can't get this job to work in the new 22.04 image, so just leave the old image for now
-.image_kokkos_openmp: &image_kokkos_openmp
-  image: registry.gitlab.com/stanfordlegion/legion/gitlab-ci-20.04:210923
 .image_hpcsdk: &image_hpcsdk
   image: registry.gitlab.com/stanfordlegion/legion/gitlab-ci-hpcsdk:250130
 .image_icc: &image_icc
@@ -1337,15 +1334,10 @@ clang12_cxx17_debug_kokkos_legion:
   <<: [*linux, *image_2004, *tests]
   variables:
     <<: [*clang12, *terra12, *debug, *cxx17_normal, *kokkos, *cmake, *legion, *ctest, *cpptrace]
-# FIXME (Elliott): I can't get this job to work in the new 22.04 image, so just leave the old image for now
-clang10_cxx17_debug_kokkos_openmp_legion:
-  <<: [*linux, *image_kokkos_openmp, *tests]
+clang14_cxx17_debug_kokkos_openmp_legion:
+  <<: [*linux, *image_2204, *tests]
   variables:
-    <<: [*clang10, *debug, *cxx17_normal, *kokkos, *openmp, *cmake, *legion, *ctest]
-# clang14_cxx17_debug_kokkos_openmp_legion:
-#   <<: [*linux, *image_2204, *tests]
-#   variables:
-#     <<: [*clang14, *terra14, *debug, *cxx17_normal, *kokkos, *openmp, *cmake, *legion, *ctest]
+    <<: [*clang14, *terra14, *debug, *cxx17_normal, *kokkos, *openmp, *cmake, *legion, *ctest]
 nvidia_cuda117_clang10_cxx17_debug_kokkos_cuda_legion:
   <<: [*nvidia, *tests]
   variables:
