--- a/docker/Dockerfile.cuda
+++ b/docker/Dockerfile.cuda
@@ -1,14 +1,11 @@
-FROM nvidia/cuda:12.4.1-base-ubuntu20.04
-MAINTAINER Sean Treichler <sean@nvidia.com>
+FROM nvidia/cuda:12.8.0-base-ubuntu22.04
+
+LABEL org.opencontainers.image.authors="Sean Treichler <sean@nvidia.com>"
+
 RUN dpkg --add-architecture i386 && \
     apt-get update -qq && \
     apt-get install -qq apt-transport-https ca-certificates software-properties-common wget curl && \
-    add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
     add-apt-repository ppa:pypy/ppa -y && \
-    wget -nv -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
-    add-apt-repository -y "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-10 main" && \
-    add-apt-repository -y "deb http://old-releases.ubuntu.com/ubuntu zesty main" && \
-    add-apt-repository -y "deb http://old-releases.ubuntu.com/ubuntu zesty universe" && \
     apt-get update -qq && \
     apt-get install -qq \
       build-essential git time wget \
@@ -18,15 +15,16 @@ RUN dpkg --add-architecture i386 && \
       gcc-9-multilib g++-9-multilib \
       gcc-10-multilib g++-10-multilib \
       gcc-11-multilib g++-11-multilib \
-      clang-10 libclang-10-dev llvm-10-dev \
-      clang-12 libclang-12-dev llvm-12-dev libomp-12-dev\
-      cmake \
+      clang-11 libclang-11-dev llvm-11-dev \
+      clang-12 libclang-12-dev llvm-12-dev libomp-12-dev \
       libdw-dev \
       libncurses5-dev libedit-dev \
       zlib1g-dev zlib1g-dev:i386 \
       mpich libmpich-dev \
       libblas-dev liblapack-dev libhdf5-dev \
       libssl-dev \
+      cmake ccache \
+      pkg-config \
       gdb vim
 
 # Install the hip repo
@@ -35,22 +33,10 @@ RUN wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | apt-key add - && \
     apt-get update -qq && \
     apt-get install -qq rocm-core hipcc-nvidia
 
-    RUN pip3 install --upgrade 'pip>=22,<23' && \
+RUN pip3 install --upgrade 'pip>=22,<23' && \
     pip3 install --upgrade 'setuptools>=62,<63' 'setuptools_rust>=1.3,<1.4' && \
     pip3 install cffi github3.py 'numpy>=1.22,<1.23' 'cryptography>=37,<38' 'pandas>=1.4,<1.5' 'h5py>=3.10,<3.11' 'notebook>=6.4,<6.5' 'mypy>=1.7,<1.8' joblib daff tabulate
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --default-toolchain 1.84.0 -y
-
-# install a bunch of flavors of CUDA
-RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.5.1/local_installers/cuda_12.5.1_555.42.06_linux.run && \
-    bash ./cuda_12.5.1_555.42.06_linux.run --toolkit --silent --override && \
-    rm ./cuda_12.5.1_555.42.06_linux.run
-RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.1.1/local_installers/cuda_12.1.1_530.30.02_linux.run && \
-   bash ./cuda_12.1.1_530.30.02_linux.run --toolkit --silent --override && \
-   rm ./cuda_12.1.1_530.30.02_linux.run
-RUN wget -nv https://developer.download.nvidia.com/compute/cuda/11.7.0/local_installers/cuda_11.7.0_515.43.04_linux.run && \
-   bash ./cuda_11.7.0_515.43.04_linux.run --toolkit --silent --override && \
-   rm ./cuda_11.7.0_515.43.04_linux.run
-RUN rm /usr/local/cuda
 
 # install gitlab-runner
 RUN wget -O /tmp/gitlab-runner-script.deb.sh https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh && \
@@ -58,4 +44,20 @@ RUN wget -O /tmp/gitlab-runner-script.deb.sh https://packages.gitlab.com/install
     apt-get install -qq gitlab-runner && \
     apt-get clean && \
     rm -f /tmp/gitlab-runner-script.deb.sh
+
+# install a bunch of flavors of CUDA (add items to the end to take advantage of image caching)
+RUN wget -nv https://developer.download.nvidia.com/compute/cuda/11.7.0/local_installers/cuda_11.7.0_515.43.04_linux.run && \
+   bash ./cuda_11.7.0_515.43.04_linux.run --toolkit --silent --override && \
+   rm ./cuda_11.7.0_515.43.04_linux.run
+RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.1.1/local_installers/cuda_12.1.1_530.30.02_linux.run && \
+   bash ./cuda_12.1.1_530.30.02_linux.run --toolkit --silent --override && \
+   rm ./cuda_12.1.1_530.30.02_linux.run
+RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.5.1/local_installers/cuda_12.5.1_555.42.06_linux.run && \
+    bash ./cuda_12.5.1_555.42.06_linux.run --toolkit --silent --override && \
+    rm ./cuda_12.5.1_555.42.06_linux.run
+RUN wget -nv https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run && \
+    bash ./cuda_12.8.0_570.86.10_linux.run --toolkit --silent --override && \
+    rm ./cuda_12.8.0_570.86.10_linux.run
+RUN rm /usr/local/cuda
+
 RUN apt-get clean
